# MCU-Token

./: .gitignore  LICENSE  README.md
Device-porting/: readme.md
Device-porting/ESP32/esp32s2/: CMakeLists.txt  Makefile
Device-porting/ESP32/esp32s2/components/: CMakeLists.txt
Device-porting/STM32F103/: keilkilll.bat
Device-porting/STM32F103/USER/: STM32F103.uvprojx  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Device-porting/STM32F429/: stm32f429-disco.yaml  stm32f429-fire.yaml  update_keil_proj.py
Device-porting/STM32F429/stm32f429-fire/: clean.bat
Device-porting/renode_emulate/: STM32F429I-Discovery.axf
MCUToken/iot_client/: readme.md
MCUToken/iot_client/app/: adc.c  adc.h  app_port.c  app_port.h  base64.c  base64.h  cdecode.c  cdecode.h  cencode.c  cencode.h  dac.c  dac.h  defs.h  device_data.h  flash_internal.c  flash_internal.h  iwdg.c  iwdg.h  pwm.c  pwm.h  rtc.c  rtc.h  shell.c  shell.h  shell_cmds.c  timer.c  timer.h  usart.c  usart.h  utils.c  utils.h
MCUToken/iot_client/fp_gen/: .gitignore  dev_reg.c  fp_gen.c  fp_gen.h  task_clock.c  task_fpu.c  task_init.c  task_store.c  task_voltage.c  token_gen.c  token_gen.h
MCUToken/iot_client/ota_protocols/: .gitignore  dev_reg.c  dev_reg.h  dev_reg_experiment.c  device_data.c  device_data.h
MCUToken/server/: .gitignore  bat_generator.py  collect_data.py  readme.md  requirements.txt
MCUToken/server/evaluation/: 0_generate_ref_log.sh  10_Fig-11.sh  1_Fig-2.sh  2_Tab-3_esp32_ensemble.sh  2_Tab-3_esp32_single.sh  2_Tab-3_f103_ensemble.sh  2_Tab-3_f103_single.sh  2_Tab-3_f429_ensemble.sh  3_Fig-6.sh  (+23 more)
(+1940 files in other folders)
